# poohackatonceiba

./: Cargo.toml  README.md
configuration/: application.yaml
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/model/: book.rs  mod.rs  person.rs
domain/src/port/: mod.rs
domain/src/port/dao/: book_dao.rs  mod.rs  person_dao.rs
domain/src/port/repository/: book_repository.rs  mod.rs  person_repository.rs
domain/src/resources/: schema.sql
domain/src/service/: book_command_service.rs  mod.rs  person_command_service.rs
infraestructure/: Cargo.toml
infraestructure/src/: lib.rs  main.rs  settings.rs  start.rs  state.rs
infraestructure/src/adapter/: mod.rs
infraestructure/src/adapter/dao/: mod.rs
infraestructure/src/adapter/repository/: mod.rs  person_repository_impl.rs
infraestructure/src/controller/: health_controller.rs  mod.rs  person_controller.rs
infraestructure/src/resources/: person.sql
