[package]
name = "infraestructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain", version = "0.1.0" }
config = "0.11.0"
actix-web = "3.0.1"
actix-rt = "2.0.2"
serde = "1.0.123"
serde_derive = "1.0.123"
postgres = "0.19.2"
include-sql = "0.1"
anyhow = "1.0.38"
serde_json = "1.0.69"
